[build-system]
requires = [
    "setuptools>=70.1.0,<80.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "waven"
version = "0.0.1"
authors = [
  { name="Sophie Skriabine", email="sophie.skriabine@gmail.com" },
]
description = "wavelet based analysis of neural spikes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "setuptools>=70.1.0,<80.0",
    "matplotlib==3.9.2",
    "numpy",
    "opencv_python",
    "pandas",
    "scikit_image",
    "scikit_learn",
    "scipy",
    "seaborn",
    "tifffile",
    "torch",
    "black",
    "isort",
    "read-roi",
    "scipy-stubs",
    "pandas-stubs",
    "tensorly"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
